feat: add octupus structure

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+    <header>
+        <h1>The Memory Game by <a href="#">elfiservice</a></h1>
+    </header>
+    <main>
+        <table id="game_grid"></table>
+    </main>
+
+
     <script src="js/jquery.js"></script>
     <script src="js/app.js"></script>
 </body>
