--- a/index.html
+++ b/index.html
@@ -13,10 +13,21 @@
         <h1>The Memory Game by <a href="#">elfiservice</a></h1>
     </header>
     <main>
-        <table id="game_grid"></table>
+        <section>
+
+        </section>
+        <section>
+                <table id="game_grid"></table>
+        </section>
+        
     </main>
 
-
+    <div class="modal_game hide">
+        <div class="modal_game_content">
+                You WIN!
+        </div>
+       
+    </div>
     <script src="js/jquery.js"></script>
     <script src="js/app.js"></script>
 </body>
