feat: add reset btn and counter moves in the game

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>The Memory Game by elfiservice</title>
     <link rel="stylesheet" href="css/style.css">
+    <!-- <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script> -->
+    <script defer src="js/lib/fontawesome-all.min.js"></script>
 </head>
 <body>
 
@@ -14,7 +16,7 @@
     </header>
     <main>
         <section>
-
+            <div id="game_control"></div>
         </section>
         <section>
                 <table id="game_grid"></table>
@@ -30,5 +32,6 @@
     </div>
     <script src="js/jquery.js"></script>
     <script src="js/app.js"></script>
+    
 </body>
 </html>
