--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <section>
             <div id="game_control"></div>
         </section>
-        <section>
+        <section class="grid_container">
                 <table id="game_grid"></table>
         </section>       
     </main>
