feat: store name of the player and show listOfPlayers

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <h1>The Memory Game by <a href="https://www.linkedin.com/in/armando-junior-elfiservice" target="_blank">elfiservice</a></h1>
     </header>
     <main>
+        <section id="player_name"></section>
         <section>
             <div id="game_control"></div>
         </section>
